# colorize-cli

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: colorize_core.cpp  colorize_core.hpp  main.cpp
tests/: CMakeLists.txt  test_colorize_core.cpp
